fix(tp): Job Listing breaks on small viewport width and short summary

--- a/apps/redi-talent-pool/src/pages/app/job-listing/JobListing.scss
+++ b/apps/redi-talent-pool/src/pages/app/job-listing/JobListing.scss
@@ -124,6 +124,10 @@
     flex-direction: row;
     justify-content: space-between;
     width: 100%;
+
+    &--mobile {
+      width: 100%;
+    }
   }
 
   &--left-column {
